kubernetes/kube/ngrok/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ngrok
  namespace: ngrok
spec:
  selector:
    app: ngrok
  type: ClusterIP
  ports:
    - name: http
      port: 4040
      targetPort: 4040
      protocol: TCP
